--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,35 +22,29 @@ h1, h2 {
 }
 
 #logo {
-    float: left;
+    margin: 0 auto;
     font-size: 280%;
-    margin-left: 30px;
     text-decoration: underline;
 }
 
 #menu {
-    font-size: 110%;
-    letter-spacing: 2px;
-}
-
-#menu, #logo {
-    line-height: 75px;
-}
-
-#menu li {
-    float: right;
-    list-style-type: none;
-    margin-right: 30px;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #menu a {
+    font-size: 150%;
     text-decoration: none;
     color: inherit;
+    margin: 0 40px;
 }
 
 #menu a:hover {
     border-bottom: 1px solid #ED1C24;
-    font-size: 120%;
+    font-size: 200%;
 }
 
 .active {
