--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,60 @@ h1, h2 {
 }
 
 /* Treadmil Image & cover text */
+
+#treadmil-outer {
+    height: 800px;
+    width: 100%;
+    overflow: hidden;
+}
+
+#cover-text h2 {
+    color: #ED1C24;
+    text-decoration: underline;
+    letter-spacing: 5px;
+}
+
+#treadmil-image {
+    height: 800px;
+    width: 100%;
+    padding-top: 10px;
+    background: url(../images/man-on-treadmil.jpg) no-repeat center center;
+    background-size: cover;
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: 'Orbitron', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    text-align: center;
+
+    width: 300px;
+    height: 300px;
+
+    bottom: 500px;
+    left: 42%;
+
+    background-color: rgba(255, 255, 255, 0.7);
+    
+    position: absolute;
+
+    /* Animation zoom effect on text */
+    animation-name: text-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+/* Creation of level of zoom */
+@keyframes text-zoom {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(1.1);
+    }
+}
+
+#cover-text h2, h3 {
+    padding: 20px;
+}
