--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,3 +174,45 @@ h1, h2 {
     color: #ED1C24;
     text-decoration: underline;
 }
+
+/* Map */
+
+#visit {
+
+}
+
+/* footer */
+
+footer{
+    height: 150px;
+}
+
+#times {
+    float: left;
+    text-align: left;
+    padding-left: 30px;
+    padding-bottom: 10px;
+    color: #ED1C24;
+}
+
+#find {
+    float: right;
+    text-align: right;
+    padding-right: 30px;
+    color: #ED1C24;
+}
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks > li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 150%;
+    margin: 1%;
+    padding: 5%;
+    color: #ED1C24;
+}
