--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,16 +38,20 @@ h1, h2 {
     align-items: center;
 }
 
-#menu a {
+.section-heading {
+    text-decoration: underline;
+}
+
+.menu-select {
     font-size: 150%;
     text-decoration: none;
     color: inherit;
     margin: 0 40px;
 }
 
-#menu a:hover {
+.menu-select:hover {
     border-bottom: 1px solid #ED1C24;
-    font-size: 200%;
+    font-size: 180%;
 }
 
 .active {
@@ -175,31 +179,44 @@ h1, h2 {
     text-decoration: underline;
 }
 
-/* Map */
+/* About us section */
 
-#visit {
-
-}
-
-/* footer */
-
-footer{
-    height: 150px;
-}
+#about-us {
+    background-image: url(../images/solo-deadlift.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 300px;
+    width: 100%;
+    overflow: hidden;
+    }
 
 #times {
     float: left;
     text-align: left;
+    letter-spacing: 1px;
     padding-left: 30px;
-    padding-bottom: 10px;
-    color: #ED1C24;
+    padding-top: 30px;
+    color: white;
 }
 
 #find {
     float: right;
     text-align: right;
+    letter-spacing: 1px;
     padding-right: 30px;
+    padding-top: 30px;
+    color: white;
+}
+
+#about-us h3 {
     color: #ED1C24;
+}
+
+/* footer */
+
+footer{
+    height: 50px;
 }
 
 .social-networks {
@@ -213,6 +230,6 @@ footer{
 .social-networks i {
     font-size: 150%;
     margin: 1%;
-    padding: 5%;
+    padding: 1%;
     color: #ED1C24;
 }
