--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ footer{
 .social-networks i {
     font-size: 150%;
     margin: 1%;
-    padding: 1%;
+    padding: 3%;
     color: #ED1C24;
 }
 
@@ -238,8 +238,60 @@ footer{
 
 .form-section {
     clear: left;
-    background: url(../images/gym-reception.jpg);
-    background-size: cover;
-    background-position: center;
+    background: #050505;
     height: 900px;
+    width: 100%;
+    display: block;
+    text-align: center;
+}
+
+.form-section {
+    color: white;
+    width: 100%;
+    height: 900px;
+    text-align: center;
+    margin: 0 auto;
+    display: inline-block;
+    position: absolute;
+}
+
+label {
+    color: white;
+    text-align: center;
+}
+
+.text-input {
+    background: transparent;
+    color: white;
+    width: 20%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #ED1C24;
+    border-radius: 2px;
+}
+
+.text-input-large {
+    background: transparent;
+    color: white;
+    width: 60%;
+    height: 100px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #ED1C24;
+    border-radius: 2px;
+}
+
+.submit-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #ED1C24;
+    color: white;
+    display: block;
+}
+
+.submit-button:hover {
+    background-color: white;
+    color: #ED1C24;
 }
