--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,6 @@ h1, h2 {
 }
 
 #logo {
-    margin: 0 auto;
     font-size: 280%;
     text-decoration: underline;
 }
@@ -46,7 +45,7 @@ h1, h2 {
     font-size: 150%;
     text-decoration: none;
     color: inherit;
-    margin: 0 40px;
+    margin: 0 10px;
 }
 
 .menu-select:hover {
@@ -237,15 +236,20 @@ footer{
 /* Form */
 
 .form-section {
-    background: #050505;
+    background: url(../images/gym-reception.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 750px;
     width: 100%;
     text-align: center;
 }
 
 #form-elements {
+    background-color: rgba(0, 0, 0, .8);
     color: white;
     margin: 0 auto;
+    height: 750px;
 }
 
 label {
@@ -299,4 +303,146 @@ label {
 .submit-button:hover {
     background-color: white;
     color: #ED1C24;
+}
+
+/* Media queries */
+
+/* For larger to medium screen size from 1200px and lower */
+
+@media screen and (max-width: 1200px) {
+    
+    #logo {
+        font-size: 200%;
+    }
+
+    .menu-select {
+        flex-shrink: 1;
+    }
+
+    .menu-select:hover {
+        font-size: 140%;
+    }
+
+    #cover-text {
+        font-size: 100%;
+        width: 250px;
+        height: 300px;
+        left: 40%;
+    }
+
+    #benefits-wrap {
+        grid-template-columns: 50% 50%;
+    }
+    
+    #classes {
+        width: 100%;
+        height: 1200px;
+        margin: 0 auto;
+        background-position: left;
+    }
+    
+    .section-heading {
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #classes > div {
+        width: 100%;
+        clear: both;
+        height: 200px;
+        padding: 0%;
+    }
+
+    .form-section {
+        height: 785px;
+    }
+
+    #form-elements {
+        height: 785px;
+    }
+
+    .form-section h2 {
+        font-size: 110%;
+    }
+}
+
+/* Medium screen sizes from 950px wide and down */
+
+@media screen and (max-width: 950px) {
+
+    #logo {
+        font-size: 170%;
+    }
+        
+    #cover-text {
+        left: 37%;
+    }
+    
+/* Small screen sizes */
+
+@media screen and (max-width: 800px) {
+    
+    #menu {
+        flex-wrap: wrap;
+        height: 100px;
+        }
+
+    #menu > div {
+        width: 100%;
+    }
+
+    #menu > a {
+        width: 15%;
+    }
+
+    #logo {
+        order: 1;
+    }
+
+    .home-menu {
+        order: 2;
+        padding-bottom: 5px;
+        text-align: center;
+        font-size: 100%;
+    }
+
+    .classes-menu {
+        order: 3;
+        padding-bottom: 5px;
+        text-align: center;
+        font-size: 100%;
+    }
+
+    .enquires-menu {
+        order: 4;
+        padding-bottom: 5px;
+        text-align: center;
+        font-size: 100%;
+    }
+
+    .visit-menu {
+        order: 5;
+        padding-bottom: 5px;
+        text-align: center;
+        font-size: 100%;
+    }
+    
+    #cover-text {
+        left: 5%;
+        font-size: 80%;
+        bottom: 0;
+        height: 230px;
+    }
+
+    #benefits-wrap {
+        display: block;
+        grid-template-columns: 100%;
+    }
+
+    #benefits-wrap h3 p {
+        position: relative;
+        margin: -3rem 0 2rem 1rem;
+        padding: 1rem;
+        background: rgba(255, 255, 255, 0.7);
+    }
 }
