Fixed missing } on css file and error when selecting drop down box in form.(First option select)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,6 +301,10 @@ label {
     padding: 4px;
 }
 
+#reason option {
+    background-color: #050505;
+}
+
 .submit-button {
     margin-top: 20px;
     border-radius: 2px;
@@ -387,6 +391,7 @@ label {
     #cover-text {
         left: 37%;
     }
+}
     
 /* Small screen sizes */
 
